client/src/components/Styles/projects.css
/* ... */
#project-image-carousel-left img {
  transform: rotateY(180deg);
}

/*
/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\
------------------------------------------------------------------------------------------------
Project Creator and Editor style rules
------------------------------------------------------------------------------------------------
\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/
*/

#project-creator-editor {
  display: flex;
  flex-direction: column;
  width: 100%;
  max-width: 1120px;
  height: calc(90vh - 100px);
  border: none;
  border-radius: 10px;
  color: var(--main-text);
}

@media (min-width: 1172px) {
  #project-creator-editor {
    width: 1120px;
  }
}

#project-editor-tabs {
  display: flex;
  justify-content: space-around;
  margin-top: 38px;
}

.project-editor-tab {
  border: none;
  border-radius: 30px;
  padding: 10px 20px;
  background-color: rgba(0, 0, 0, 0) !important;
  color: var(--main-text);
  font-size: 2ch;
  font-weight: 500;
}

.project-editor-tab:hover,
.project-editor-tab-active,
#team-add-member-add-button,
#team-edit-member-save-button {
  background-color: var(--primary-color) !important;
  color: var(--invert-text);
  font-weight: 700;
}

#project-editor-save,
#team-add-member-add-button,
#team-edit-member-save-button {
  border: none;
  border-radius: 30px;
  padding: 10px 20px;
  background-color: var(--primary-color) !important;
  color: var(--invert-text);
  font-size: 2ch;
  width: max-content;
  margin: auto;
  font-weight: 700;
}

#project-editor-content {
  flex-grow: 1;
  margin: 35px 56px 40px 55px;
}

#project-editor-content label,
#project-team-add-member-title,
#team-add-member-cancel-button,
#project-team-edit-member-title,
#team-edit-member-cancel-button,
#project-team-delete-member-title,
#team-delete-member-cancel-button {
  color: var(--primary-color);
  background-color: transparent;
  font-size: 2ch;
  font-weight: 700;
  border: none;
}

#project-editor-content select {
  font-size: 1.5ch;
  color: var(--neutral-gray);
}

.italic {
  font-style: italic;
}

.project-link-select-wrapper {
  width: fit-content;
}

.project-link-select-wrapper .project-link-select {
  background-color: var(--bg-color);
  border: 1px solid var(--border-color);
}

.project-link-input-wrapper {
  position: relative;
  width: 100%;
  display: flex;
  align-items: center;
}

.project-link-input-wrapper input {
  border: 1px solid var(--border-color);
  border-radius: 10px;
  padding: 15px;
  flex-grow: 1;
  background-color: var(--bg-color);
  color: var(--main-text);
  font-size: 1.6ch;
  outline: none;
}

/* Project Editor/Creator General Tab */
#project-editor-content select,
#project-editor-general input,
#project-editor-content textarea,
#project-team-add-member-name input {
  border: 1px solid var(--border-color);
  border-radius: 10px;
  padding: 15px;
  flex-grow: 1;
  background-color: var(--bg-color);
  color: var(--main-text);
  font-size: 1.6ch;
  outline: none;
}
#project-editor-content select {
  appearance: none;
  position: relative;
}

#project-editor-content .select-container {
  width: auto;
  flex-grow: 1;
}

#project-editor-content .select-button {
  background-color: var(--bg-color);
  border: 1px solid var(--border-color);
}

#project-editor-content select::after {
  content: url('../../../build/assets/dropdown_dark.png');
  position: absolute;
  top: 50%;
  right: 1rem;
  transform: translateY(50%);
}

/* #project-editor-content select {
  appearance: none;
  background-image: url('../../../build/assets/dropdown_dark.png');
  background-repeat: no-repeat;
  background-size: 20px;
  background-position-x: 150px;
  background-position-y: 20px;
} */

#project-editor-content .title-input {
  padding: 8px 15px;
}

#project-editor-content textarea {
  resize: none;
}

.project-editor-extra-info {
  font-style: italic;
  font-size: 1.4ch;
  color: var(--neutral-gray);
}

.project-editor-extra-info > input[type='file'] {
  display: none;
  color: var(--orange);
}

#project-editor-general {
  display: grid;
  height: 100%;
  grid-template:
    'title title about' 1fr
    'status purpose about' 1fr
    'audience audience about' 2fr
    'desc desc about' 3fr /
    1fr 1fr 2.5fr;
  gap: 15px 15px;
}

.project-editor-input-item {
  display: flex;
  flex-direction: column;
  position: relative;

  input {
    background-color: var(--bg-color);
  }

  textarea {
    background-color: var(--bg-color);
  }

  select {
    background-color: var(--bg-color);
  }

  .select-button {
    background-color: var(--bg-color);
  }
}

.project-editor-input-item > .project-editor-extra-info,
#project-editor-media > .project-editor-extra-info,
#project-editor-selected-tags > .project-editor-extra-info {
  margin-top: 2px;
}

.project-editor-input-item > select * {
  margin: 10px 0;
  padding: 15px;
}

.project-editor-input-item > select > option:first-child {
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
}

.project-editor-input-item > select > option:last-child {
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
}

.project-editor-input-item > select > option:hover {
  background-color: var(--orange);
  color: var(--bg-color);
}

.character-count {
  font-style: italic;
  font-size: 1.6ch;
  position: absolute;
  margin: 10px 0;
  bottom: 7px;
  right: 14px;
  color: var(--neutral-gray);
  user-select: none;
}

#project-editor-title-input {
  grid-area: title;
}

#project-editor-status-input {
  grid-area: status;
}

#project-editor-purpose-input {
  grid-area: purpose;
}

#project-editor-audience-input {
  grid-area: audience;
}

#project-editor-description-input {
  grid-area: desc;
}

#project-editor-type-tags,
#project-editor-selected-tags {
  background-color: var(--bg-color);
  /* box-shadow: 0 0 3px var(--gray); */
  border: 1px solid var(--border-color);
  border-radius: 10px;
  padding: 20px;
}
/* ... */

